--- a/App-HRIS/public/css/styles.css
+++ b/App-HRIS/public/css/styles.css
@@ -33,6 +33,7 @@ body {
     background: #f7f8fb;
 }
 
+
 .title {
     background-color: transparent;
 }
@@ -52,6 +53,28 @@ body {
     color: rgb(255, 255, 255, 0.8);
 }
 
-#navbar_dropdown a {
-    color: black !important;
+
+#shortcut {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: auto auto auto auto;
+    text-align: center;
+}
+
+#shortcut img {
+    width: 75px;
+}
+
+#test {
+    background-color: rgb(255,255,255); /* Fallback color */
+    background-color: rgba(255,255,255, 0.6); /* Black w/opacity/see-through */
+    backdrop-filter: blur(5px);
+}
+
+#profile_dropdown {
+    background-color: rgb(0, 135, 145);
+}
+
+#profile_dropdown a:hover{
+    background-color: rgb(1, 125, 134);
 }
