--- a/App-HRIS/public/css/styles.css
+++ b/App-HRIS/public/css/styles.css
@@ -50,7 +50,7 @@ body {
 
 #navbar button,
 #navbar a {
-    color: rgb(255, 255, 255, 0.8);
+    color: rgba(255, 255, 255, 0.8);
 }
 
 
@@ -65,7 +65,13 @@ body {
     width: 75px;
 }
 
-#test {
+#shortcut a:hover {
+    scale: 1.05;
+    text-shadow: 2px 2px 3px rgba(255,255,255, 1);
+}
+
+.card_container {
+    margin-top: 1.5rem;
     background-color: rgb(255,255,255); /* Fallback color */
     background-color: rgba(255,255,255, 0.6); /* Black w/opacity/see-through */
     backdrop-filter: blur(5px);
@@ -83,3 +89,11 @@ body {
     color: black;
 }
 
+#announcement_card {
+    display: grid;
+    grid-gap: 1em;
+    grid-auto-rows: auto;
+    grid-template-rows: auto;
+    grid-template-columns: auto auto;
+    text-align: center;
+}
